--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,13 @@ php:
 
 before_script:
   - cp .env.travis .env
-  - mysql -e 'create database homestead_test;'
   - composer self-update
   - composer install --no-interaction
+  - php artisan key:generate
+  - php artisan migrate:refresh --seed
+
+before_install:
+  - mysql -e 'create database homestead_test;'
 
 script:
   - vendor/bin/phpunit
