--- a/.env.travis
+++ b/.env.travis
@@ -7,6 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=testing
+DB_TEST_HOST=127.0.0.1
 DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
 
